[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cannect"
version = "1.0.7"
description = "HYUNDAI-KEFICO EMS/ASW CONVENIENCE TOOL\nAUTHOR: LEE JEHYEUK\nCONTACT: JeHyeuk.Lee@hyundai-kefico.com"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaleido",
    "lxml",
    "mdfreader",
    "numpy",
    "pandas",
    "plotly",
    "psutil",
    "pya2ldb",
    "pyautogui",
    "pygetwindow",
    "pyperclip",
    "python-can",
    "python-docx",
    "python-dotenv",
    "python-pptx",
    "pywin32",
    "tqdm",
    "xlsxwriter"
]